# connect-to-calibre.app

./: CMakeLists.txt  build.sh  configure.sh  toolchain.cmake
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: .gitignore  book_manager.cpp  book_manager.h  cache_manager.cpp  cache_manager.h  calibre_protocol.cpp  calibre_protocol.h  i18n.cpp  i18n.h  main.cpp  network.cpp  network.h
